@@ -18,22 +18,32 @@
     <h3>Entschlüsseln und verifizieren, Entschlüsseln, Verifizieren</h3>
     <p>
       Entschlüsselt und/oder verifiziert die ausgewählten Dateien.
+      FIXME: Hier wird ein Link zur Kleopatra-Dokumentation für die
+      Entschlüssel- und Verifizier-Funktionen eingestellt.
     </p>
     <h3>Verschlüsseln und signieren, Verschlüsseln, Signieren</h3>
     <p>
       Verschlüsselt und/oder signiert die ausgewählten Dateien.
+      FIXME: Hier wird ein Link zur Kleopatra-Dokumentation für die
+      Verschlüssel- und Signier-Funktionen eingestellt.
     </p>
     <h3>Zertifikate importieren</h3>
     <p>
-      Import die Zertifikate in den ausgewählten Dateien.
+      Import die Zertifikate in den ausgewählten Dateien.  FIXME: Hier
+      wird ein Link zur Kleopatra-Dokumentation für die
+      Import-Funktion eingestellt.
     <p>
     <h3>Prüfsummen erstellen</h3>
     <p>
-      Erstellt Prüfsummen für die ausgewählten Dateien.
+      Erstellt Prüfsummen für die ausgewählten Dateien.  FIXME: Hier
+      wird ein Link zur Kleopatra-Dokumentation für die Funktionen zur
+      Erstellung von Prüfsummen eingestellt.
     </p>
     <h3>Prüfsummen verifizieren</h3>
     <p>
-      Verifiziert die Prüfsummen für die ausgewählten Dateien.
+      Verifiziert die Prüfsummen für die ausgewählten Dateien.  FIXME:
+      Hier wird ein Link zur Kleopatra-Dokumentation für die Funktion
+      zur Verifikation von Prüfsummen eingestellt.
     </p>
     <h3>Hilfe zu GpgEX</h3>
     <p>
