@@ -17,23 +17,32 @@
     <h2>Commands</h2>
     <h3>Decrypt and verify, Decrypt, Verify</h3>
     <p>
-      Decrypt and/or verify the selected files.
+      Decrypt and/or verify the selected files.  FIXME: Here will be a
+      link to the Kleopatra documentation for the decrypt and verify
+      functions.
     </p>
     <h3>Encrypt and sign, Encrypt, Sign</h3>
     <p>
-      Encrypt and/or sign the selected files.
+      Encrypt and/or sign the selected files.  FIXME: Here will be a
+      link to the Kleopatra documentation for the sign and encrypt
+      functions.
     </p>
     <h3>Import keys</h3>
     <p>
-      Import certificates in the selected files.
+      Import certificates in the selected files.  FIXME: Here will be
+      a link to the Kleopatra documentation for the import function.
     <p>
     <h3>Create checksums</h3>
     <p>
-      Create checksums for the selected files.
+      Create checksums for the selected files.  FIXME: Here will be a
+      link to the Kleopatra documentation for the create checksum
+      function.
     </p>
     <h3>Verify checksums</h3>
     <p>
-      Verify the checksums for the selected files.
+      Verify the checksums for the selected files.  FIXME: Here will
+      be a link to the Kleopatra documentation for the verify checksum
+      function.
     </p>
     <h3>Help on GpgEX</h3>
     <p>
